{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 19,
  "lineage": "f7f531ba-0940-bcb6-a995-8ad3f86e991d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vmweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/loadBalancingRules/http"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/publicIPAddresses/vmweb-public-ip"
              }
            ],
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb",
            "location": "southeastasia",
            "name": "vmweb-lb",
            "resource_group_name": "vmweb-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.vmweb",
            "azurerm_resource_group.vmweb",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Compute/virtualMachineScaleSets/vmweb-vmss/virtualMachines/1/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration"
            ],
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/backendAddressPools/web-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb",
            "name": "web-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.vmweb",
            "azurerm_public_ip.vmweb",
            "azurerm_resource_group.vmweb",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.vmweb",
            "azurerm_public_ip.vmweb",
            "azurerm_resource_group.vmweb",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/backendAddressPools/web-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb",
            "name": "http",
            "probe_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/loadBalancers/vmweb-lb/probes/ssh-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.vmweb",
            "azurerm_lb_backend_address_pool.bpepool",
            "azurerm_lb_probe.vmweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vmweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/networkSecurityGroups/vmweb-nsg",
            "location": "southeastasia",
            "name": "vmweb-nsg",
            "resource_group_name": "vmweb-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "80",
                  "8080"
                ],
                "direction": "Inbound",
                "name": "web-http-rule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vmweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web-in",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "443",
              "80",
              "8080"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/networkSecurityGroups/vmweb-nsg/securityRules/web-http-rule",
            "name": "web-http-rule",
            "network_security_group_name": "vmweb-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "vmweb-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vmweb",
            "azurerm_resource_group.vmweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vmweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "djdgsk",
            "fqdn": "djdgsk.southeastasia.cloudapp.azure.com",
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/publicIPAddresses/vmweb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.205.210.54",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "vmweb-public-ip",
            "resource_group_name": "vmweb-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vmweb",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vmweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/virtualNetworks/vmweb-vnet/subnets/vmweb-subnet",
            "name": "vmweb-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "vmweb-rg",
            "virtual_network_name": "vmweb-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.vmweb",
            "azurerm_virtual_network.vmweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/virtualNetworks/vmweb-vnet/subnets/vmweb-subnet",
            "network_security_group_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/networkSecurityGroups/vmweb-nsg",
            "subnet_id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/virtualNetworks/vmweb-vnet/subnets/vmweb-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vmweb",
            "azurerm_resource_group.vmweb",
            "azurerm_subnet.vmweb",
            "azurerm_virtual_network.vmweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vmweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4861b7d2-e1e2-4a69-9e79-bc82047adc0e",
            "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/virtualNetworks/vmweb-vnet",
            "location": "southeastasia",
            "name": "vmweb-vnet",
            "resource_group_name": "vmweb-rg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/virtualNetworks/vmweb-vnet/subnets/vmweb-subnet",
                "name": "vmweb-subnet",
                "security_group": "/subscriptions/fae55954-9781-45c3-bef9-cab565149f12/resourceGroups/vmweb-rg/providers/Microsoft.Network/networkSecurityGroups/vmweb-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vmweb"
          ]
        }
      ]
    }
  ]
}